# Metaverse-Network

./: .gitignore  .gitmodules  .rustfmt.toml  Bounties.md  Cargo.toml  HEADER-GPL3  Makefile  NODE.md  README.md  bootNode.json  customType.json  docker-compose.yml  metadataType.json  para-8888--new-genesis  para-8888-new.wasm  pioneer-2000-wasm  pioneer-2001-genesis  pioneer-2002-genesis  pioneer-dev-genesis-2000  pioneer-dev-wasm  pioneer-roc-genesis  pioneer-roc-raw.json  pioneer-roc-wasm  rust-toolchain.toml  tewai-dev-bootNode.json
modules/bridge/: Cargo.toml
modules/bridge/src/: lib.rs  mock.rs  tests.rs
modules/chainsafe/: Cargo.toml
modules/chainsafe/src/: lib.rs
modules/relaychain/: Cargo.toml
modules/relaychain/src/: lib.rs
modules/support/: Cargo.toml
modules/support/src/: lib.rs
node/: Cargo.toml  Cargo.toml.orig  build.rs
node/res/: 2096-polkadot-v0.9.11.genesis  2096-polkadot-v0.9.11.wasm  continuum-live-raw-spec.json  continuum-live-spec.json  pioneer-live-raw-spec.json  pioneer-live-spec.json  pioneerSpec.json  pioneerSpecRaw.json
node/src/: chain_spec.rs  cli.rs  command.rs  command_helper.rs  lib.rs  main.rs  para_chain_spec.rs  pioneer_command.rs  rpc.rs  service.rs
node/src/chain_spec/: continuum.rs  metaverse.rs  mod.rs  pioneer.rs  tewai.rs
node/src/rpc/: rpc_continuum.rs  rpc_metaverse.rs  rpc_pioneer.rs  rpc_tewai.rs
node/src/service/: continuum.rs  metaverse.rs  pioneer.rs  service_bitcountry.rs  service_tewai.rs  standalone.rs  tewai.rs
pallets/asset-manager/: Cargo.toml
pallets/asset-manager/src/: lib.rs  mock.rs  tests.rs
pallets/auction/: AuctionInterface.sol  Cargo.toml
pallets/auction-manager/: Cargo.toml
pallets/auction-manager/src/: lib.rs
pallets/auction/src/: auction.rs  benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/bc-governance/: Cargo.toml
pallets/bc-governance/src/: lib.rs
pallets/bitcountry/: Cargo.toml
pallets/bitcountry/src/: lib.rs  mock.rs  tests.rs
pallets/block/: Cargo.toml
pallets/block/src/: lib.rs  mock.rs  tests.rs
pallets/continuum/: Cargo.toml
pallets/continuum/src/: lib.rs  mock.rs  tests.rs  types.rs  vote.rs  weights.rs
pallets/core/: Cargo.toml
pallets/core/src/: lib.rs
pallets/country/: Cargo.toml
pallets/country/src/: lib.rs  mock.rs  tests.rs
pallets/crowdloan/: Cargo.toml
pallets/crowdloan/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/currencies/: Cargo.toml  CurrencyInterface.sol
pallets/currencies/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/economy/: Cargo.toml
pallets/economy/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs  weights_d.rs
pallets/emergency/: Cargo.toml
pallets/emergency/src/: benchmarking.rs  lib.rs  weights.rs
pallets/estate/: Cargo.toml
pallets/estate/src/: benchmarking.rs  lib.rs  mock.rs  rate.rs  tests.rs  weights.rs  weights.rs.orig
pallets/evm-mapping/: Cargo.toml
pallets/evm-mapping/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/governance/: Cargo.toml  design.md
pallets/governance/src/: lib.rs  mock.rs  tests.rs  types.rs  useful code
pallets/metaverse/: Cargo.toml  MetaverseInterface.sol
pallets/metaverse/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs  weights.rs.orig
pallets/mining/: Cargo.toml
pallets/mining/src/: benchmarking.rs  lib.rs  mining.rs  mock.rs  tests.rs  weights.rs
pallets/nft/: Cargo.toml  NFTInterface.sol
pallets/nft/src/: benchmarking.rs  default_weight.rs  lib.rs  mock.rs  tests.rs  utils.rs  weights.rs
pallets/oracle/: Cargo.toml
pallets/oracle/src/: lib.rs  tests.rs
pallets/parachain-info/: Cargo.toml
pallets/parachain-info/src/: lib.rs
pallets/primitives/: Cargo.toml
pallets/primitives/continuum/: Cargo.toml
pallets/primitives/continuum/src/: lib.rs
pallets/primitives/src/: continuum.rs  dex.rs  lib.rs
pallets/reward/: Cargo.toml
pallets/reward/e2e-test-example/: e2e-test-example.js  package.json
pallets/reward/e2e-test-setup/: e2e_test_setup.js  package.json
pallets/reward/js-test-merkle-tree-generator/: merkle-tree-test.js  package.json
pallets/reward/src/: lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/bitcountry/: Cargo.toml
runtime/bitcountry/src/: constants.rs  lib.rs
runtime/bitcountry/src/weights/: mod.rs  module_nft.rs
runtime/common/: Cargo.toml
runtime/common/src/: auction.rs  currencies.rs  lib.rs  metaverse.rs  mock.rs  mod.rs  nft.rs  precompiles.rs  tests.rs
runtime/common/src/precompile/: currencies.rs  mock.rs  mod.rs
runtime/common/src/precompiles/: mod.rs
runtime/common/src/tests/: currencies.rs  metaverse.rs  mod.rs  nft.rs
runtime/continuum/: Cargo.toml
runtime/continuum/src/: constants.rs  lib.rs
runtime/continuum/src/weights/: mod.rs  module_auction.rs  module_continuum.rs  module_currencies.rs  module_economy.rs  module_emergency.rs  module_estate.rs  module_evm_mapping.rs  module_metaverse.rs  module_mining.rs  module_nft.rs  module_nft_migration.rs  module_reward.rs
runtime/integration-tests/: Cargo.toml
runtime/integration-tests/src/: deploy_land_block_won_from_an_auction.rs  estate.rs  evm.rs  kusama_test.rs  lib.rs  nft.rs  purchase_nft_from_buy_now_listing.rs  runtime.rs  setup.rs  weights.rs  xcm_transfers.rs
runtime/integration-tests/src/relaychain/: kusama_cross_chain_transfer.rs  kusama_test.rs  kusama_test_net.rs  mod.rs  relay_chain.rs  statemine.rs
runtime/metaverse/: Cargo.toml  Cargo.toml.orig  Cargo_BACKUP_18978.toml  Cargo_BASE_18978.toml  Cargo_REMOTE_18978.toml
runtime/metaverse/src/: constants.rs  lib.rs  lib.rs.orig
runtime/metaverse/src/benchmarking/: auction.rs  continuum.rs  economy.rs  estate.rs  governance.rs  metaverse.rs  mod.rs  reward.rs  utils.rs
runtime/metaverse/src/weights/: mod.rs  (+12 more)
runtime/pioneer/: Cargo.toml
runtime/pioneer/src/: constants.rs  impl.rs  lib.rs
runtime/src/: constants.rs  lib.rs
runtime/src/weights/: module_nft.rs
runtime/tewai/: Cargo.toml  build.rs
runtime/tewai/src/: constants.rs  lib.rs
(+188 files in other folders)
