[profile.release]
panic = 'unwind'

[workspace]
members = [
    'pallets/*',
    'traits/*',
    'node',
    'runtime/metaverse',
    'runtime/continuum',
    'runtime/pioneer',
    'runtime/common',
    'primitives/*',
    'modules/relaychain',
    'modules/support',
    'modules/bridge',
]

[workspace.dependencies]
# General 
codec = { package = 'parity-scale-codec', version = '3.1.5', features = ['derive'] }
log = { version = "0.4.17" }
scale-info = { version = "2.1.2", features = ["derive"] }
smallvec = "1.8.0"
hex-literal = { version = "0.3.4" }
clap = { version = "4.2.4", features = ["derive"] }
parking_lot = "0.12.1"
async-trait = "0.1"
jsonrpsee = { version = "0.16.2", features = ["server"] }
url = "2.3.1"
tracing-core = "0.1.28"
impl-trait-for-tuples = "0.2.1"
num_enum = { version = "0.5.3", default-features = false }
ethabi = { version = "18.0.0", default-features = false }
getrandom = { version = "0.2.7", features = ["js"]}



# FRAME
frame-executive = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38'}
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }
frame-system-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38'}
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }
frame-try-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.38" }

# Substrate Primitive Dependencies
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-network-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }
sp-inherents = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }
sp-offchain = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }
sp-session = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }
sp-version = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-transaction-storage-proof = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-application-crypto = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }
sp-arithmetic = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }
sp-keyring = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }

# Substrate Utilities
node-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
try-runtime-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.38" }

# Node template RPCs
jsonrpc-core = "18.0.0"
jsonrpc-pubsub = "18.0.0"
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }

# Substrate Pallets
pallet-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }
pallet-collective = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }
pallet-democracy = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }
pallet-sudo = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }
pallet-multisig = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }
pallet-treasury = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }
pallet-vesting = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
pallet-utility = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }
pallet-bounties = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }
pallet-preimage = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }
pallet-membership = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
pallet-proxy = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.38' }

# Cumulus
cumulus-client-consensus-aura = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-client-consensus-common = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-client-collator = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-client-cli = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-client-network = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-client-service = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-relay-chain-interface = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-relay-chain-minimal-node = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-relay-chain-rpc-interface = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-relay-chain-inprocess-interface = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-pallet-aura-ext = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-pallet-parachain-system = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-pallet-dmp-queue = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-pallet-xcm = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-pallet-xcmp-queue = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-primitives-timestamp = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-primitives-utility = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-primitives-parachain-inherent = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-pallet-session-benchmarking = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
parachain-info = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
pallet-collator-selection = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
cumulus-test-relay-sproof-builder = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
statemine-runtime = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.38' }
# Polkadot
polkadot-cli = { git = 'https://github.com/paritytech/polkadot', branch = "release-v0.9.38" }
polkadot-service = { git = 'https://github.com/paritytech/polkadot', branch = "release-v0.9.38" }
polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', branch = "release-v0.9.38" , default-features = false }
polkadot-runtime-parachains = { git = 'https://github.com/paritytech/polkadot', branch = "release-v0.9.38" , default-features = false }
polkadot-primitives = { git = 'https://github.com/paritytech/polkadot', branch = "release-v0.9.38" , default-features = false }
xcm = { git = 'https://github.com/paritytech/polkadot', branch = "release-v0.9.38" , default-features = false }
xcm-builder = { git = 'https://github.com/paritytech/polkadot', branch = "release-v0.9.38" , default-features = false }
xcm-executor = { git = 'https://github.com/paritytech/polkadot', branch = "release-v0.9.38" , default-features = false }
pallet-xcm = { git = 'https://github.com/paritytech/polkadot', branch = "release-v0.9.38" , default-features = false }
polkadot-runtime-common = { git = 'https://github.com/paritytech/polkadot', branch = "release-v0.9.38", default-features = false }
kusama-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38", default-features = false }

# ORML
orml-currencies = { git = "https://github.com/bit-country/open-runtime-module-library", branch = "v-9.38", default-features = false  }
orml-tokens = { git = "https://github.com/bit-country/open-runtime-module-library", branch = "v-9.38", default-features = false  }
orml-traits = { git = "https://github.com/bit-country/open-runtime-module-library", branch = "v-9.38", default-features = false  }
orml-nft = { git = "https://github.com/bit-country/open-runtime-module-library", branch = "v-9.38", default-features = false  }
orml-unknown-tokens = { git = "https://github.com/bit-country/open-runtime-module-library", branch = "v-9.38", default-features = false  }
orml-xtokens = { git = "https://github.com/bit-country/open-runtime-module-library", branch = "v-9.38", default-features = false  }
orml-xcm = { git = "https://github.com/bit-country/open-runtime-module-library", branch = "v-9.38", default-features = false  }
orml-xcm-support = { git = "https://github.com/bit-country/open-runtime-module-library", branch = "v-9.38", default-features = false  }
orml-oracle = { git = "https://github.com/bit-country/open-runtime-module-library", branch = "v-9.38", default-features = false  }
orml-benchmarking = { git = "https://github.com/bit-country/open-runtime-module-library", branch = "v-9.38", default-features = false }

# EVM
pallet-evm = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38" }
pallet-ethereum = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38" }
pallet-base-fee = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38" }
pallet-dynamic-fee = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38" }
fp-self-contained = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38" }
fp-rpc = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38" }
fp-evm = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38" }
fp-consensus = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38"}
fp-storage = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38"}
fc-cli = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38"}
fc-rpc = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38"}
fc-rpc-core = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38"}
fc-consensus = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38"}
fc-mapping-sync = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38"}
fc-db = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38"}
pallet-evm-precompile-blake2 = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38" }
pallet-evm-precompile-bn128 = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38" }
pallet-evm-precompile-dispatch = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38" }
pallet-evm-precompile-ed25519 = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38" }
pallet-evm-precompile-modexp = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38" }
pallet-evm-precompile-sha3fips = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38" }
pallet-evm-precompile-simple = { git = "https://github.com/justinphamnz/frontier", branch = "polkadot-v0.9.38" }

# ink!
pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }

# Metaverse Network dependencies
primitives = { package = "bit-country-primitives", path = "../../primitives/metaverse" }
auction-manager = { package = "auction-manager", path = "../../traits/auction-manager" }
metaverse = { package = "pallet-metaverse", path = "../../pallets/metaverse" }
estate = { package = "pallet-estate", path = "../../pallets/estate" }
nft = { package = "pallet-nft", path = "../../pallets/nft", version = "2.0.0-rc6" }
continuum = { package = "pallet-continuum", path = "../../pallets/continuum", version = "0.0.1" }
auction = { package = "pallet-auction", path = "../../pallets/auction", version = "2.0.0-rc6" }
currencies = { package = "currencies", path = "../../pallets/currencies", version = "2.0.0-rc6" }
mining = { package = "pallet-mining", path = "../../pallets/mining", version = "2.0.0-rc6" }
reward = { package = "pallet-reward", path = "../../pallets/reward", version = "2.0.0-rc6" }
governance = { package = "pallet-governance", path = "../../pallets/governance", version = "2.0.0-rc6" }
crowdloan = { package = "pallet-crowdloan", path = "../../pallets/crowdloan", version = "2.0.0-rc6" }
economy = { package = "pallet-economy", path = "../../pallets/economy", version = "2.0.0-rc6" }
emergency = { package = "pallet-emergency", path = "../../pallets/emergency", version = "2.0.0-rc6" }
core-primitives = { path = "../../traits/core-primitives" }
metaverse-runtime-common = { path = "../common" }
asset-manager = { path = "../../pallets/asset-manager" }
evm-mapping = { package = "pallet-evm-mapping", path = "../../pallets/evm-mapping" }
